@@ -50,6 +50,9 @@ New Features
 10.SOLR-938:  Add event listener API for import start and end.
               (Kay Kay, Noble Paul via shalin)
 
+11.SOLR-801:  Add support for configurable pre-import and post-import delete query per root-entity.
+              (Noble Paul via shalin)
+
 Optimizations
 ----------------------
 1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
